using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public struct ConstManager
{
    public const string FLOOR_LAYER = "Floor";
    public const string PLAYER_LAYER = "Player";
    public const string CHECKPOINT_LAYER = "Checkpoint";
    public const string JUMP = "Jump";
    public const string LAND = "Land";
    public const string FALLING = "Falling";
    public const string TELEPORTER = "Teleporter";
    public const string MOVING_PLATFORM = "MovingPlatform";
}
